--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lt-react-kit",
   "version": "1.0.0",
-  "description": "",
+  "description": "react kit",
   "main": "index.js",
   "scripts": {
     "build": "webpack --env=build --progress --colors",
